--- a/src/App.css
+++ b/src/App.css
@@ -37,16 +37,34 @@ body{
     background-color: hsl(0, 0%, 100%) !important;
 }
 header{
-    background-color: white;
-height: 50px;
+    /* border-bottom: 3px solid var(--color); */
+    /* position: fixed; */
+    /* background-color: white !important; */
+/* height: 50px; */
+/* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px; */
+transition: 0.6s ease-in-out !important;
+
+}
+.navba{
+    top: 0px !important;
+    margin-bottom: 150px  !important;
+    width: 100% !important;
+    border-bottom: 3px solid var(--color) !important;
+    /* position: fixed; */
+    background-color: white !important;
+    z-index: 100;
+/* height: 50px; */
+/* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px; */
+
 }
 .navdiv
 {
     /* padding: 50px 0px; */
-    position: fixed;
-    height: 70px;
+    /* position: fixed; */
+    /* margin: auto; */
+    /* height: 70px; */
     transition: 1.2s ease-in-out !important;
-box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+/* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px; */
 }
 
 .animate__animated {
